Update and rename zktm12.html to zktm13.html

--- a/example/zktm13.html
+++ b/example/zktm13.html
@@ -271,7 +271,9 @@
 		    
 
 <br><br><br>
-<h4 style="color:green">Seleziona la distanza dell&rsquo;arredo in metri</h4>		    
+<h4 style="color:green">Arredo selezionato: </h4>
+<br><br>
+<h4 style="color:green">Inserire la distanza dell&rsquo;arredo in metri dalla camera</h4>		    
 <p id="distanzaitemcam"></p>
 <br>
 <select id="ddlViewBy" onchange="changeFunc();">
