--- a/example/zktm13.html
+++ b/example/zktm13.html
@@ -271,7 +271,7 @@
 		    
 
 <br><br><br>
-<h4 style="color:green">Arredo selezionato: </h4>
+<h4 style="color:green" id="nomeitemcam"></h4>
 <br><br>
 <h4 style="color:green">Inserire la distanza dell&rsquo;arredo in metri dalla camera</h4>		    
 <p id="distanzaitemcam"></p>
