--- a/example/zktm15.html
+++ b/example/zktm15.html
@@ -272,11 +272,11 @@
 <br><br><br>
 <h4 style="color:green" id="nomeitemcam"></h4>
 <br><br>
-<h4 style="color:green">Inserire la distanza dell&rsquo;arredo in metri dalla camera</h4>		    
+<h4 style="color:green">Inserire la distanza a cui porre l&rsquo;arredo (in metri)</h4>		    
 <p id="distanzaitemcam"></p>
 <br>
 <select id="ddlViewBy" onchange="changeFunc();">
-  <option value="0">Seleziona</option>
+  <option value="0" selected="selected">Seleziona</option>
   <option value="1">1 m</option>
   <option value="2">2 m</option>
   <option value="3">3 m</option>
