Update and rename zktm15.html to zktm16.html

--- a/example/zktm16.html
+++ b/example/zktm16.html
@@ -149,7 +149,7 @@
               </div>
             </div>
 
-            <label><input type="checkbox" id="fixed" /> Blocca posizione</label>
+   <!--      <label><input type="checkbox" id="fixed" /> Blocca posizione</label>     -->
  <!--  -->           <br />
             <label><span class="text-muted" style="color:green" id="prez">Prezzo: </span><i><span id="modelPricetot"></span></i>
 	    <span class="text-muted" style="color:green" id="infoiva"> IVA inclusa</span>
@@ -168,6 +168,7 @@
 		link
 	      </a> 
    
+	    <br /><br /><br />
    
 <script>
   $( function() {
