Update and rename zktm16.html to zktm17.html

--- a/example/zktm17.html
+++ b/example/zktm17.html
@@ -149,8 +149,9 @@
               </div>
             </div>
 
-   <!--      <label><input type="checkbox" id="fixed" /> Blocca posizione</label>     -->
- <!--  -->           <br />
+   <!--      <label><input type="checkbox" id="fixed" /> Blocca posizione</label>     
+             <br />      -->
+ <!--  -->
             <label><span class="text-muted" style="color:green" id="prez">Prezzo: </span><i><span id="modelPricetot"></span></i>
 	    <span class="text-muted" style="color:green" id="infoiva"> IVA inclusa</span>
 	    </label>  
@@ -392,6 +393,8 @@ var strUser = e.options[e.selectedIndex].text;
               <!-- Items added here by items_5.js commento -->
             </div>   <br><br>
           </div>
+		
+		<br><br><br>
 		
 		
         </div> 
