Update and rename zktm17.html to zktm18.html

--- a/example/zktm18.html
+++ b/example/zktm18.html
@@ -396,7 +396,7 @@ var strUser = e.options[e.selectedIndex].text;
 		
 	
         </div> 
-        <!-- End Right Column -->
+        <!-- End Right Column -->   <br /><br /><br />
       </div>
       </div> </div>
 
