Update and rename zktm18.html to zktm19.html

--- a/example/zktm19.html
+++ b/example/zktm19.html
@@ -396,8 +396,8 @@ var strUser = e.options[e.selectedIndex].text;
 		
 	
         </div> 
-        <!-- End Right Column -->   <br /><br /><br />
-      </div>
+        <!-- End Right Column --> 
+      </div>                         <br /><br /><br />
       </div> </div>
 
 
