Update and rename zktm19.html to zktm20.html

--- a/example/zktm20.html
+++ b/example/zktm20.html
@@ -397,9 +397,10 @@ var strUser = e.options[e.selectedIndex].text;
 	
         </div> 
         <!-- End Right Column --> 
-      </div>                         <br /><br /><br />
-      </div> </div>
-
+      </div>                         
+      </div> </div> 
+		
+<br /><br /><br />
 
 
 
