Update and rename zktm20.html to zktm21.html

--- a/example/zktm21.html
+++ b/example/zktm21.html
@@ -399,13 +399,10 @@ var strUser = e.options[e.selectedIndex].text;
         <!-- End Right Column --> 
       </div>                         
       </div> </div> 
-		
-<br /><br /><br />
 
 
 
-
-	</div>
+	</div>                     <p></p><br /><br /><br />
 
 
 
