--- a/example/zktm21.html
+++ b/example/zktm21.html
@@ -402,7 +402,7 @@ var strUser = e.options[e.selectedIndex].text;
 
 
 
-	</div>                     <p></p><br /><br /><br />
+	</div>                    
 
 
 
