--- a/example/zktm22.html
+++ b/example/zktm22.html
@@ -391,7 +391,7 @@ var strUser = e.options[e.selectedIndex].text;
             <div class="row" id="items-wrapper_5">  
 
               <!-- Items added here by items_5.js commento -->
-            </div>   <br><br>
+            </div>   <br><br>  <br><br>
           </div>
 		
 	
