Update and rename zktm23.html to zktm24.html

--- a/example/zktm24.html
+++ b/example/zktm24.html
@@ -382,7 +382,7 @@ var strUser = e.options[e.selectedIndex].text;
             <div class="row" id="items-wrapper_4">  
 
               <!-- Items added here by items_4.js commento -->
-            </div>   <br><br>
+            </div>   <br><br>  <br><br>
           </div>
           
          
@@ -391,7 +391,7 @@ var strUser = e.options[e.selectedIndex].text;
             <div class="row" id="items-wrapper_5">  
 
               <!-- Items added here by items_5.js commento -->
-            </div>   <br><br>
+            </div>   <br><br>   <br><br>
           </div>
 		
 	
