--- a/example/zktm31BIS.html
+++ b/example/zktm31BIS.html
@@ -319,9 +319,9 @@ if (strUser != "Seleziona")  {
 		    
 	<br><br><br>
 	<center>	    
-	Premere per arredo in realt&agrave; virtuale<br>		    
+	<h4 style="color:green">Premere per arredo in realt&agrave; virtuale</h4><br>		    
         <a href="" class="btn btn-default btn-sm" id="modelAr3Dlink">
-        <span class="glyphicon glyphicon-fullscreen" title="Full Screen Realt%agrave; Aumentata">REALTA </span>       <!-- Nuovo  -->
+        <span class="glyphicon glyphicon-fullscreen" title="Full Screen Realtà Aumentata"></span>       <!-- Nuovo  -->
         </a>
         </center>	
 		    
