--- a/example/zktm34BIS.html
+++ b/example/zktm34BIS.html
@@ -26,7 +26,7 @@
     <script src="js/items_4.js"></script>
     <script src="js/items_5.js"></script>
     
-    <script src="js/znelot6.js"></script>
+    <script src="js/znelot7.js"></script>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
@@ -318,7 +318,7 @@ if (strUser != "Seleziona")  {
     <!--    *****************************     -->
 		    
 	<br><br><br>	    
-	<h4 style="color:green"><u>Premere</u> per arredo in realt&agrave; virtuale  </h4><br>		    
+	<h4 style="color:green" id="fullsar1"><u>Premere</u> per arredo in realt&agrave; virtuale  </h4><br>		    
         <a href="" class="btn btn-default btn-sm" id="modelAr3Dlink">
         <span class="glyphicon glyphicon-fullscreen" title="Full Screen Realtà Aumentata"></span> Realt&agrave; Virtuale       <!-- Nuovo  -->
         </a>	
