Update and rename zktm34BIS.html to zktm35BIS.html

--- a/example/zktm35BIS.html
+++ b/example/zktm35BIS.html
@@ -318,9 +318,9 @@ if (strUser != "Seleziona")  {
     <!--    *****************************     -->
 		    
 	<br><br><br>	    
-	<h4 style="color:green" id="fullsar1"><u>Premere</u> per arredo in realt&agrave; virtuale  </h4><br>		    
+	<h4 style="color:green" id="fullsar1"></h4><br>		    
         <a href="" class="btn btn-default btn-sm" id="modelAr3Dlink">
-        <span class="glyphicon glyphicon-fullscreen" title="Full Screen Realtà Aumentata"></span> Realt&agrave; Virtuale       <!-- Nuovo  -->
+        <span class="glyphicon glyphicon-fullscreen" title="Full Screen Realtà Aumentata" id="fullsar2"></span> Realt&agrave; Virtuale       <!-- Nuovo  -->
         </a>	
 		    
 		  <!--    *****************************     -->  
