Update and rename zktm35BIS.html to zktm36BIS.html

--- a/example/zktm36BIS.html
+++ b/example/zktm36BIS.html
@@ -26,7 +26,7 @@
     <script src="js/items_4.js"></script>
     <script src="js/items_5.js"></script>
     
-    <script src="js/znelot7.js"></script>
+    <script src="js/znelot8.js"></script>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
@@ -320,7 +320,7 @@ if (strUser != "Seleziona")  {
 	<br><br><br>	    
 	<h4 style="color:green" id="fullsar1"></h4><br>		    
         <a href="" class="btn btn-default btn-sm" id="modelAr3Dlink">
-        <span class="glyphicon glyphicon-fullscreen" title="Full Screen Realtà Aumentata" id="fullsar2"></span> Realt&agrave; Virtuale       <!-- Nuovo  -->
+        <span class="glyphicon glyphicon-fullscreen" title="Full Screen Realtà Aumentata" id="fullsar2"></span> Realt&agrave; Aumentata       <!-- Nuovo  -->
         </a>	
 		    
 		  <!--    *****************************     -->  
