--- a/example/zktm39BIS.html
+++ b/example/zktm39BIS.html
@@ -319,7 +319,7 @@ if (strUser != "Seleziona")  {
 		    
 	<br><br><br>	    
 	<h4 style="color:green" id="fullsar1"></h4><br>		    
-        <a href="" class="btn btn-default btn-sm" id="modelAr3Dlink" style="display:hidden">
+        <a href="" class="btn btn-default btn-sm" id="modelAr3Dlink">
         <span class="glyphicon glyphicon-fullscreen" title="Full Screen Realtà Aumentata" id="fullsar2"></span> Realt&agrave; Aumentata       <!-- Nuovo  -->
         </a>	
 		    
