Update and rename zzalert3-1.html to zzalert3-2.html

--- a/example/zzalert3-2.html
+++ b/example/zzalert3-2.html
@@ -24,9 +24,9 @@ function getParameterByName(name, url) {
 }
 
 
-var foo = getParameterByName('link');
-var bar = getParameterByName('item');
-var baz = getParameterByName('Dst');
+var link = getParameterByName('link');
+var item = getParameterByName('item');
+var Dst = getParameterByName('Dst');
 
 alert("le variabili sono: link="+link+" poi item="+item+" poi distanza="+Dst+"");
 </script>
