Update and rename zzalert4.html to zzalert5.html

--- a/example/zzalert5.html
+++ b/example/zzalert5.html
@@ -124,6 +124,7 @@ var link = getParameterByName('link');
 var item = getParameterByName('item');
 var Dst = getParameterByName('Dst');
 alert("le variabili sono: link="+link+" poi item="+item+" poi distanza="+Dst+"");
+document.getElementById("avocado").src = link;
 </script>
 	
 	
