Update and rename zzalert5.html to zzalert6.html

--- a/example/zzalert6.html
+++ b/example/zzalert6.html
@@ -139,7 +139,7 @@ document.getElementById("avocado").src = link;
 
     <!-- we define our gltf model -->
     <a-assets>
-      <a-asset-item id="avocado" src="https://raw.githubusercontent.com/KhronosGroup/glTF-Sample-Models/master/2.0/Box/glTF-Embedded/Box.gltf"></a-asset-item>
+      <a-asset-item id="avocado" src=""></a-asset-item>
     </a-assets>
 
     <a-entity gltf-model="#avocado" look-controls="reverseMouseDrag:true" scale="0.1 0.1 0.1" position="0 0 0"></a-entity>
