Update and rename zktm42BIS.html to zktm43BIS.html

--- a/example/zktm43BIS.html
+++ b/example/zktm43BIS.html
@@ -24,7 +24,7 @@
     <script src="js/items_2.js"></script>
     <script src="js/items_3.js"></script>
     <script src="js/items_4.js"></script>
-    <script src="js/items_5.js"></script>
+    <script src="js/items_5Z.js"></script>
     
     <script src="js/znelot12.js"></script>
 
