Update and rename zzalert8.html to zzalert9.html

--- a/example/zzalert9.html
+++ b/example/zzalert9.html
@@ -131,7 +131,6 @@ var linkfin = "https://raw.githubusercontent.com/KhronosGroup/glTF-Sample-Models
 	
 alert("quello che vedro: "+linkfin);	
 	
-document.getElementById("avocado").src = linkfin;
 </script>
 	
 	
@@ -146,7 +145,7 @@ document.getElementById("avocado").src = linkfin;
 
     <!-- we define our gltf model -->
     <a-assets>
-      <a-asset-item id="avocado" src=""></a-asset-item>
+      <a-asset-item id="avocado" src="'+linkfin+'"></a-asset-item>
     </a-assets>
 
     <a-entity gltf-model="#avocado" look-controls="reverseMouseDrag:true" scale="0.1 0.1 0.1" position="0 0 0"></a-entity>
