--- a/example/zzalert11.html
+++ b/example/zzalert11.html
@@ -145,7 +145,7 @@ alert("quello che vedro: "+linkfin);
 
     <!-- we define our gltf model -->
     <a-assets>
-	    <a-asset-item id="avocado" src="'<script>linkfin</script>'"></a-asset-item>
+	    <a-asset-item id="avocado" src=""></a-asset-item>
     </a-assets>
 
     <a-entity gltf-model="#avocado" look-controls="reverseMouseDrag:true" scale="0.1 0.1 0.1" position="0 0 0"></a-entity>
@@ -155,5 +155,9 @@ alert("quello che vedro: "+linkfin);
     </a-scene>  
   
   
+<script>
+document.getElementById("avocado").src = linkfin;	
+</script>
+	
   
 </body></html>
