--- a/example/zktm46BIS.html
+++ b/example/zktm46BIS.html
@@ -275,7 +275,7 @@
 
 <br><br>
 <h4 style="color:green" id="nomeitemcam"></h4>
-<br>
+
 <h4 style="color:green">Inserire la distanza a cui porre l&rsquo;arredo (in metri)</h4>		    
 <p id="distanzaitemcam"></p>
 
@@ -337,7 +337,7 @@ if (strUser != "Seleziona")  {
 </script>		    
 				    
 	<br>	    
-	<h4 style="color:green" id="fullsar1"></h4><br>		    
+	<h4 style="color:green" id="fullsar1"></h4>		    
         <a href="" class="btn btn-default btn-sm" id="modelAr3Dlink" style="display:none;">
         <span class="glyphicon glyphicon-fullscreen" title="Full Screen Realtà Aumentata" id="fullsar2"></span> Realt&agrave; Aumentata       <!-- Nuovo  -->
         </a>	
