Update and rename zandroide.html to zandroide1.html

--- a/example/zandroide1.html
+++ b/example/zandroide1.html
@@ -35,8 +35,8 @@
 
   <script src="https://aframe.io/releases/0.7.0/aframe.min.js"></script>
   <script src="https://rawgit.com/jeromeetienne/ar.js/master/aframe/build/aframe-ar.js"></script>
-  <!-- include artoolkit-webvr-polyfill.js -->
-  <script src="js/artoolkit-webvr-polyfill.js"></script>
+  <!-- include a polyfill for chrome android -->
+  <script src="https://webrtc.github.io/adapter/adapter-latest.js"></script>
 
        
   </head>
