--- a/example/zzzzzpappon2.html
+++ b/example/zzzzzpappon2.html
@@ -24,8 +24,10 @@
 <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
 <script src="js/html2canvas.js"></script>
 
-<script src="https://aframe.io/releases/0.7.1/aframe.min.js"></script>
-<script src="https://rawgit.com/jeromeetienne/ar.js/master/aframe/build/aframe-ar.js"></script>
+<script src="https://cdn.rawgit.com/StoriaNum/aframe/master/dist/aframe-v0.7.1.min.js"></script>	  
+<script src="https://cdn.rawgit.com/StoriaNum/AR.js/master/aframe/build/aframe-ar.js"></script>
+<!-- include a polyfill for chrome android -->
+<script src="https://webrtc.github.io/adapter/adapter-latest.js"></script>
        
   </head>
 
