--- a/example/zandroide4.html
+++ b/example/zandroide4.html
@@ -35,9 +35,9 @@
 
 <script src="https://cdn.rawgit.com/StoriaNum/aframe/master/dist/aframe-v0.7.1.min.js"></script>	  
 <script src="https://cdn.rawgit.com/StoriaNum/AR.js/master/aframe/build/aframe-ar.js"></script>
-<!-- include a polyfill for chrome android -->
-<script src="https://webrtc.github.io/adapter/adapter-latest.js"></script>
-
+<!-- include a polyfill for chrome android 
+<script src="https://webrtc.github.io/adapter/adapter-latest.js"></script>  -->
+<script src="https://cdn.rawgit.com/StoriaNum/webrtc/gh-pages/adapter-latest.js"></script>
 
        
   </head>
