--- a/example/zsfaccimm30.html
+++ b/example/zsfaccimm30.html
@@ -17,13 +17,13 @@
 
     <!-- we define our gltf model -->
     <a-assets>
-    <!--  <a-asset-item id="avocado" src="https://raw.githubusercontent.com/StoriaNum/mobrea/gh-pages/prova1mbis.gltf"></a-asset-item> -->
-     <a-asset-item id="avocado" src="https://raw.githubusercontent.com/StoriaNum/mobrea/gh-pages/test3x4m.gltf"></a-asset-item> 
+      <a-asset-item id="avocado" src="https://raw.githubusercontent.com/StoriaNum/mobrea/gh-pages/prova1mbis.gltf"></a-asset-item> 
+  <!--    <a-asset-item id="avocado" src="https://raw.githubusercontent.com/StoriaNum/mobrea/gh-pages/test3x4m.gltf"></a-asset-item> -->
     </a-assets>
 
-    <a-entity gltf-model="#avocado" look-controls="reverseMouseDrag:true" scale="0.007 0.007 0.007" position="-1.6 0 -1"></a-entity>
+ <!--   <a-entity gltf-model="#avocado" look-controls="reverseMouseDrag:true" scale="0.007 0.007 0.007" position="-1.6 0 -1"></a-entity> -->
 
- 
+<a-entity gltf-model="#avocado" look-controls="reverseMouseDrag:true" scale="1 1 1" position="0 0 0"></a-entity>
     
     </a-scene>
 </body>
