--- a/example/zsfaccimm70.html
+++ b/example/zsfaccimm70.html
@@ -23,7 +23,7 @@
 
  <!--   <a-entity gltf-model="#avocado" look-controls="reverseMouseDrag:true" scale="0.007 0.007 0.007" position="-1.6 0 -1"></a-entity> -->
 
-<a-entity gltf-model="#avocado" look-controls="reverseMouseDrag:true" scale="1 1 1" position="-0.5 0 0" rotation="0 0 0"></a-entity>
+<a-entity gltf-model="#avocado" look-controls="reverseMouseDrag:false" scale="1 1 1" position="-0.5 0 0" rotation="0 0 0"></a-entity>
     
    <!--   <a-entity gltf-model="#avocado" look-controls="reverseMouseDrag:true" scale="1 1 1" position="-0.5 0 0"></a-entity>  --> 
     
