Update and rename zsfaccimm77.html to zsfaccimm78.html

--- a/example/zsfaccimm78.html
+++ b/example/zsfaccimm78.html
@@ -2,8 +2,11 @@
 <html>
 <head>
   <title>So I heard millenials love Avocados...</title>
-  <script src="https://aframe.io/releases/0.7.0/aframe.min.js"></script>
-  <script src="https://rawgit.com/jeromeetienne/ar.js/master/aframe/build/aframe-ar.js"></script>
+<script src="https://cdn.rawgit.com/StoriaNum/aframe/master/dist/aframe-v0.7.1.min.js"></script>	  
+<script src="https://cdn.rawgit.com/StoriaNum/AR.js/master/aframe/build/aframe-ar.js"></script>
+<!-- include a polyfill for chrome android 
+<script src="https://webrtc.github.io/adapter/adapter-latest.js"></script>  -->
+<script src="https://cdn.rawgit.com/StoriaNum/webrtc/gh-pages/ultimoadapter.js"></script>
 
 </head>
 <body>
@@ -23,7 +26,7 @@
 
  <!--   <a-entity gltf-model="#avocado" look-controls="reverseMouseDrag:true" scale="0.007 0.007 0.007" position="-1.6 0 -1"></a-entity> -->
 
-<a-entity gltf-model="#avocado" look-controls="reverseMouseDrag:true" scale="1 1 1" position="-0.5 0 0" rotation="0 0 0"></a-entity>
+<a-entity gltf-model="#avocado" look-controls="reverseMouseDrag:true" scale="1 1 1" position="-0.5 0 0" rotation="-30 0 0"></a-entity>
     
    <!--   <a-entity gltf-model="#avocado" look-controls="reverseMouseDrag:true" scale="1 1 1" position="-0.5 0 0"></a-entity>  --> 
     
