--- a/example/zsfaccimm83.html
+++ b/example/zsfaccimm83.html
@@ -2,9 +2,8 @@
 <html>
 <head>
   <title>So I heard millenials love Avocados...</title>
-<!-- <script src="https://cdn.rawgit.com/StoriaNum/aframe/master/dist/aframe-v0.7.1.min.js"></script>
-<script src="https://cdn.rawgit.com/StoriaNum/aframe/master/dist/aframe-v0.7.1gioversion.js"></script> --> 
-<script src="https://cdn.rawgit.com/StoriaNum/aframe/master/dist/compressed.js"></script>
+<!-- <script src="https://cdn.rawgit.com/StoriaNum/aframe/master/dist/aframe-v0.7.1.min.js"></script> --> 
+<script src="https://cdn.rawgit.com/StoriaNum/aframe/master/dist/aframe-v0.7.1gioversion.min.js"></script>
 <script src="https://cdn.rawgit.com/StoriaNum/AR.js/master/aframe/build/aframe-ar.js"></script>
 <!-- include a polyfill for chrome android 
 <script src="https://webrtc.github.io/adapter/adapter-latest.js"></script>  -->
