--- a/example/nezozzo.html
+++ b/example/nezozzo.html
@@ -1,1 +1,31 @@
+<!DOCTYPE html>
+<html>
+<head>
+  <meta charset="utf-8">
+ 
+  <title></title>
+  
+  
+    <script>
+  /*    da inserire in head tag del file html
+  if(window.innerHeight > window.innerWidth){
+    alert("Please use Landscape!");
+}   */
 
+if(window.innerHeight > window.innerWidth){
+    alert("Please use Landscape!");
+}
+  
+  </script>
+  
+  
+  
+</head>
+<body>
+
+  <p>Ciao bello!</p>
+  
+
+
+</body>
+</html>
