--- a/example/nezozzo.html
+++ b/example/nezozzo.html
@@ -5,6 +5,11 @@
  
   <title></title>
   
+  <link href="css/bootstrap.css" rel="stylesheet">
+    <script src="js/jquery.js"></script>
+    <script src="js/bootstrap.js"></script>
+  <script src="js/bootstrap.js"></script>
+  
   
     <script>
   /*    da inserire in head tag del file html
