--- a/example/indexX.html
+++ b/example/indexX.html
@@ -157,6 +157,9 @@
             <a class="btn btn-block btn-success" href="" id="namecodeitem" target="_blank">
 		link
 	      </a> 
+		    
+	      <br /><br />
+	      <span id="modelDatartot" hidden></span>
    
    
 <script>
