--- a/example/indexX.html
+++ b/example/indexX.html
@@ -24,7 +24,7 @@
     <script src="js/items_4X.js"></script>
     <script src="js/items_5X.js"></script>
     
-    <script src="js/example.js"></script>
+    <script src="js/exampleX.js"></script>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
