Update and rename indexX.html to indexX-.html

--- a/example/indexX-.html
+++ b/example/indexX-.html
@@ -159,7 +159,7 @@
 	      </a> 
 		    
 	      <br /><br />
-	      <span id="modelDatartot" hidden></span>
+	      <span id="modelDatartot"></span>
    
    
 <script>
