--- a/example/indexX2.html
+++ b/example/indexX2.html
@@ -10,7 +10,7 @@
 
     <!-- Make sure you've built blueprint3d.js -->
     <!-- See README.md for details -->
-    <script src="js/blueprint3d.js"></script>
+    <script src="js/blueprint3dX.js"></script>
 
     <script src="js/jquery.js"></script>
     <script src="js/bootstrap.js"></script>
