Update and rename zktm48BIS.html to zktm49BIS.html

--- a/example/zktm49BIS.html
+++ b/example/zktm49BIS.html
@@ -173,7 +173,7 @@
 	      </a> 
    
 	    <br /><br /><br />
-	    <span id="modelDatartot"></span>
+	    <span id="modelDatartot" hidden></span>
    
 <script>
   $( function() {
