--- a/example/zktm30.html
+++ b/example/zktm30.html
@@ -26,7 +26,7 @@
     <script src="js/items_4.js"></script>
     <script src="js/items_5.js"></script>
     
-    <script src="js/znelot13.js"></script>
+    <script src="js/znelot14.js"></script>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
@@ -173,6 +173,7 @@
 	      </a> 
    
 	    <br /><br /><br />
+	    <span id="modelDatartot" hidden></span>
    
 <script>
   $( function() {
