Update and rename zktm52BIS.html to zktm53BIS.html

--- a/example/zktm53BIS.html
+++ b/example/zktm53BIS.html
@@ -173,7 +173,7 @@
 	      </a> 
    
 	    <br /><br /><br />
-	    <span id="modelDatartot" hidden></span>
+	    <span id="modelDatartot"></span>
    
 <script>
   $( function() {
