--- a/example/zktm55BIS.html
+++ b/example/zktm55BIS.html
@@ -303,7 +303,7 @@
 		    
 <script>
 
-var preseqvett = document.getElementById("modelDatartot").innerHTML;	
+var preseqvett = document.getElementById("modelDatartot").innerHTML;	alert (preseqvett);
 	
 var seqvettori ="?"+preseqvett;
 var Sx = getParameterByName('Sx',seqvettori);
