--- a/example/zktm58BIS.html
+++ b/example/zktm58BIS.html
@@ -318,7 +318,7 @@ function getParameterByName(name, url) {
     if (!results[2]) return '';
     return decodeURIComponent(results[2].replace(/\+/g, " "));
 } ////fine della funzione, nel seguito ricostruzione dei parametri	
-var preseqvett = document.getElementById("modelDatartot").innerHTML;	alert (preseqvett);
+var preseqvett = document.getElementById("modelDatartot").innerHTML;
 	
 var seqvettori ="?"+preseqvett;
 var Sx = getParameterByName('Sx',seqvettori);
