Update and rename zktm60BIS.html to zktm61BIS.html

--- a/example/zktm61BIS.html
+++ b/example/zktm61BIS.html
@@ -308,6 +308,17 @@
 		    
 <script>
 	
+////////// funzione che raccoglie i componenti di #avocado
+function getParameterByName(name, url) {
+    if (!url) url = window.location.href;
+    name = name.replace(/[\[\]]/g, "\\$&");
+    var regex = new RegExp("[?&]" + name + "(=([^&#]*)|&|#|$)"),
+        results = regex.exec(url);
+    if (!results) return null;
+    if (!results[2]) return '';
+    return decodeURIComponent(results[2].replace(/\+/g, " "));
+} ////fine della funzione, nel seguito ricostruzione dei parametri	
+	
 var preseqvett = document.getElementById("modelDatartot").innerHTML;
 	
 var seqvettori ="?"+preseqvett;
@@ -327,17 +338,7 @@ Pz.length=elD;
 for (ii = 1; ii <= Pz.length; ii++) { 
      Pz[ii-1]=parseFloat(Pz[ii-1]);    
 }	
-	
-////////// funzione che raccoglie i componenti di #avocado
-function getParameterByName(name, url) {
-    if (!url) url = window.location.href;
-    name = name.replace(/[\[\]]/g, "\\$&");
-    var regex = new RegExp("[?&]" + name + "(=([^&#]*)|&|#|$)"),
-        results = regex.exec(url);
-    if (!results) return null;
-    if (!results[2]) return '';
-    return decodeURIComponent(results[2].replace(/\+/g, " "));
-} ////fine della funzione, nel seguito ricostruzione dei parametri	
+		
 		
 function changeFunc() {
 	
@@ -368,7 +369,7 @@ var Px = this.Px;
 var Py = this.Py;
 var D = this.D;
 	
-	
+alert(Sx);	
 	
 if (strUser != "Seleziona")  {	
 
