Update and rename legolando.html to legolando1.html

--- a/example/legolando1.html
+++ b/example/legolando1.html
@@ -388,7 +388,7 @@ if (strUser != "Seleziona")  {
 }
 </script>		    
 	
-	<span id="modelDatartot" hidden></span>	    
+	<a href="" id="modelDatartot" style="display:none;">	    
 	<br>	    
 	<h4 style="color:green" id="fullsar1"></h4>		    
         <a href="" class="btn btn-default btn-sm" id="modelAr3Dlink" style="display:none;">
