--- a/example/legolando3.html
+++ b/example/legolando3.html
@@ -324,7 +324,7 @@ function getParameterByName(name, url) {
     return decodeURIComponent(results[2].replace(/\+/g, " "));
 } ////fine della funzione, nel seguito ricostruzione dei parametri	
 		
-var seqvettori ="?"+preseqvett;
+var seqvettori ="https://aaa/aaa.html?"+preseqvett;
 var Sx = getParameterByName('Sx',seqvettori);
 var Sy = getParameterByName('Sy',seqvettori);
 var Sz = getParameterByName('Sz',seqvettori);
