Update and rename legolando4.html to legolando5.html

--- a/example/legolando5.html
+++ b/example/legolando5.html
@@ -308,11 +308,8 @@
 		    
 <script>
 	
-		
-function changeFunc() {
-	
     var preseqvett = document.getElementById("modelDatartot").innerHTML;
-    var seqvettori ="https://aaa/aaa.html?"+preseqvett;
+    var seqvettori ="https://aaa.aa/aaa.html?"+preseqvett;
 		
 ////////// funzione che raccoglie i componenti di #avocado
 function getParameterByName(name, url) {	
@@ -341,8 +338,12 @@ var Pz = PzTot.split('!');
 Pz.length=elD;
 for (ii = 1; ii <= Pz.length; ii++) { 
      Pz[ii-1]=parseFloat(Pz[ii-1]);    
-}		
+}	
 	
+	
+	
+function changeFunc() {
+				
 var e = document.getElementById("ddlViewBy");
 var strUser = e.options[e.selectedIndex].text;
 	
