Update and rename legolando10.html to legolando11.html

--- a/example/legolando11.html
+++ b/example/legolando11.html
@@ -346,9 +346,9 @@ var PzTot = D.substring(pos2punti);
 var elD = 14-iD+1;
 var Pz = PzTot.split('!');
 Pz.length=elD;
-for (ii = 1; ii <= Pz.length; ii++) { 
+/* for (ii = 1; ii <= Pz.length; ii++) { 
      Pz[ii-1]=parseFloat(Pz[ii-1]);    
-}
+} */
 	
 ////////// funzione che raccoglie i componenti di #avocado
 function getParameterByName(name, url) {	
