--- a/example/legolando12.html
+++ b/example/legolando12.html
@@ -308,9 +308,42 @@
 		    
 <script>
 	
+var preseqvett = document.getElementById("modelDatartot").innerHTML;
+var seqvettori ="https://aaa.aa/aaa.html?"+preseqvett;
+	
+////////// funzione che raccoglie i componenti di #avocado
+function getParameterByName(name, url) {	
+    if (!url) url = this.seqvettori;
+    name = name.replace(/[\[\]]/g, "\\$&");
+    var regex = new RegExp("[?&]" + name + "(=([^&#]*)|&|#|$)"),
+        results = regex.exec(url);
+    if (!results) return null;
+    if (!results[2]) return '';
+    return decodeURIComponent(results[2].replace(/\+/g, " "));
+} ////fine della funzione, nel seguito ricostruzione dei parametri
+
+var Sx = getParameterByName('Sx',seqvettori);
+var Sy = getParameterByName('Sy',seqvettori);
+var Sz = getParameterByName('Sz',seqvettori);
+var Px = getParameterByName('Px',seqvettori);
+var Py = getParameterByName('Py',seqvettori);
+	
+var D = getParameterByName('D',seqvettori);
+var iD= parseInt(D.substr(0, D.indexOf(':'))); 
+var pos2punti=D.indexOf(":")+1;
+var PzTot = D.substring(pos2punti);
+var elD = 14-iD+1;
+var Pz = PzTot.split('!');
+Pz.length=elD;
+ for (ii = 1; ii <= Pz.length; ii++) { 
+     Pz[ii-1]=parseFloat(Pz[ii-1]);    
+}	
+	
+	
 	
 function changeFunc() {
 
+alert (this.D); alert(this.Sx); alert(this.Sy); 	
 	
 var e = document.getElementById("ddlViewBy");
 var strUser = e.options[e.selectedIndex].text;
@@ -331,40 +364,10 @@ hreftemp = hreftemp.replace(/(&Dst=2,5%20m)+/g, "");
 hreftemp = hreftemp.replace(/(&Dst=3,5%20m)+/g, "");
 hreftemp = hreftemp.replace(/(&Dst=4,5%20m)+/g, "");
 	
-var preseqvett = document.getElementById("modelDatartot").innerHTML;
-var seqvettori ="https://aaa.aa/aaa.html?"+preseqvett;
-var Sx = getParameterByName('Sx',seqvettori);
-var Sy = getParameterByName('Sy',seqvettori);
-var Sz = getParameterByName('Sz',seqvettori);
-var Px = getParameterByName('Px',seqvettori);
-var Py = getParameterByName('Py',seqvettori);
-	
-var D = getParameterByName('D',seqvettori);
-var iD= parseInt(D.substr(0, D.indexOf(':'))); 
-var pos2punti=D.indexOf(":")+1;
-var PzTot = D.substring(pos2punti);
-var elD = 14-iD+1;
-var Pz = PzTot.split('!');
-Pz.length=elD;
-/* for (ii = 1; ii <= Pz.length; ii++) { 
-     Pz[ii-1]=parseFloat(Pz[ii-1]);    
-} */
-	
-////////// funzione che raccoglie i componenti di #avocado
-function getParameterByName(name, url) {	
-    if (!url) url = this.seqvettori;
-    name = name.replace(/[\[\]]/g, "\\$&");
-    var regex = new RegExp("[?&]" + name + "(=([^&#]*)|&|#|$)"),
-        results = regex.exec(url);
-    if (!results) return null;
-    if (!results[2]) return '';
-    return decodeURIComponent(results[2].replace(/\+/g, " "));
-} ////fine della funzione, nel seguito ricostruzione dei parametri	
-	
 	
 if (strUser != "Seleziona")  {	
 
-        document.getElementById("modelAr3Dlink").href = hreftemp+"&Dst="+strUser+"&Sx="+Sx+"&Sy="+Sy+"&Sz="+Sz+"&Px="+Px+"&Py="+Py+"&D="+D;
+        document.getElementById("modelAr3Dlink").href = hreftemp+"&Dst="+strUser+"&Sx="+this.Sx+"&Sy="+Sy+"&Sz="+Sz+"&Px="+Px+"&Py="+Py+"&D="+D;
 	
 	
    } else {
