Update and rename legolando12.html to legolando13.html

--- a/example/legolando13.html
+++ b/example/legolando13.html
@@ -308,7 +308,7 @@
 		    
 <script>
 	
-var preseqvett = document.getElementById("modelDatartot").innerHTML;
+var preseqvett = document.getElementById("modelDatartot").innerHTML;   alert(preseqvett);
 var seqvettori ="https://aaa.aa/aaa.html?"+preseqvett;
 	
 ////////// funzione che raccoglie i componenti di #avocado
