Update and rename legolando16.html to legolando17.html

--- a/example/legolando17.html
+++ b/example/legolando17.html
@@ -327,7 +327,7 @@ function getParameterByName(name, url) {
     return decodeURIComponent(results[2].replace(/\+/g, " "));
 } ////fine della funzione, nel seguito ricostruzione dei parametri	
 	
-function functionPeS {	
+function functionPeS() {	
 var preseqvett = document.getElementById("modelDatartot").innerHTML;   alert(preseqvett);
 var seqvettori ="https://aaa.aa/aaa.html?"+preseqvett;
 	
