--- a/example/legolando18.html
+++ b/example/legolando18.html
@@ -328,7 +328,7 @@ function getParameterByName(name, url) {
 } ////fine della funzione, nel seguito ricostruzione dei parametri	
 	
 function functionPeS() {	
-var preseqvett = document.getElementById("modelDatartot").innerHTML;   alert(preseqvett);
+var preseqvett = document.getElementById("modelDatartot").innerHTML;
 var seqvettori ="https://aaa.aa/aaa.html?"+preseqvett;
 	
 var Sx = getParameterByName('Sx',seqvettori);  this.Sx = Sx;
