--- a/example/legolando21.html
+++ b/example/legolando21.html
@@ -317,7 +317,7 @@ var Px;
 var Py;
 var D;
 var Pz;	
-	
+/*	
 ////////// funzione che raccoglie i componenti di #avocado
 function getParameterByName(name, url) {	
     name = name.replace(/[\[\]]/g, "\\$&");
@@ -327,18 +327,21 @@ function getParameterByName(name, url) {
     if (!results[2]) return '';
     return decodeURIComponent(results[2].replace(/\+/g, " "));
 } ////fine della funzione, nel seguito ricostruzione dei parametri	
-	
+*/	
 function functionPeS() {	
 var preseqvett = document.getElementById("modelDatartot").innerHTML;
 var seqvettori ="https://aaa.aa/aaa.html?"+preseqvett;
-	
+/*	
 var Sx = getParameterByName('Sx',seqvettori);  this.Sx = Sx;
 var Sy = getParameterByName('Sy',seqvettori);  this.Sy = Sy;
 var Sz = getParameterByName('Sz',seqvettori);  this.Sz = Sz;
 var Px = getParameterByName('Px',seqvettori);  this.Px = Px;
 var Py = getParameterByName('Py',seqvettori);  this.Py = Py;
 	
-var D = getParameterByName('D',seqvettori);    this.D = D;
+var D = getParameterByName('D',seqvettori);    this.D = D;  */
+
+	
+	
 var iD= parseInt(D.substr(0, D.indexOf(':'))); 
 var pos2punti=D.indexOf(":")+1;
 var PzTot = D.substring(pos2punti);
