Update and rename legolando22.html to legolando23.html

--- a/example/legolando23.html
+++ b/example/legolando23.html
@@ -340,9 +340,9 @@ var elD = 14-iD+1;
 
 var Pz = PzTot.split('!');
 	
-alert(Sx);alert(Py);alert(D);
-	
 this.Sx=Sx; this.Sy=Sy; this.Sz=Sz; this.Px=Px; this.Py=Py; this.D=D;	
+	
+	alert(Sz);
 	
 }	
 
