--- a/example/legolando27.html
+++ b/example/legolando27.html
@@ -316,6 +316,7 @@ var Sz;
 var Px;
 var Py;
 var D;	
+var Pz;	
 	
 	///////////////////
 function functionPeS() {	
@@ -340,8 +341,14 @@ var elD = 14-iD+1;
 
 
 var Pz = PzTot.split('!');
+Pz.length=elD;
+for (ii = 1; ii <= Pz.length; ii++) { 
+
+     Pz[ii-1]=parseFloat(Pz[ii-1]);
+     
+}
 	
-this.Sx=Sx; this.Sy=Sy; this.Sz=Sz; this.Px=Px; this.Py=Py; this.D=D;	
+this.Sx=Sx; this.Sy=Sy; this.Sz=Sz; this.Px=Px; this.Py=Py; this.D=D; this.Pz=Pz;	
 	
 } ////////////	
 	
@@ -371,7 +378,7 @@ hreftemp = hreftemp.replace(/(&Dst=4,5%20m)+/g, "");
 	
 if (strUser != "Seleziona")  {	
 
-        document.getElementById("modelAr3Dlink").href = hreftemp+"&Dst="+strUser+"&Sx="+this.Sx+"&Sy="+this.Sy+"&Sz="+this.Sz+"&Px="+this.Px+"&Py="+this.Py+"&D="+this.D;
+        document.getElementById("modelAr3Dlink").href = hreftemp+"&Dst="+strUser+"&Sx="+this.Sx+"&Sy="+this.Sy+"&Sz="+this.Sz+"&Px="+this.Px+"&Py="+this.Py+"&Pz="+this.Pz[4];
 	
 	
    } else {
