--- a/example/legolando30.html
+++ b/example/legolando30.html
@@ -354,6 +354,8 @@ this.Sx=Sx; this.Sy=Sy; this.Sz=Sz; this.Px=Px; this.Py=Py; this.D=D; this.Pz=Pz
 	
 function changeFunc() {
 
+functionPeS();	
+	
 var e = document.getElementById("ddlViewBy");
 var strUser = e.options[e.selectedIndex].text;
 	
